--- a/index.html
+++ b/index.html
@@ -1,5 +1,110 @@
-<html>
+<!DOCTYPE html>
+<html lang="">
+	<head>
+		<meta charset="utf-8" />
+		<title>Will Nichols - IT & Web Developer</title>
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<meta name="robots" content="" />
+
+		<style type="text/css">
+
+		@font-face {
+		font-family: 'NoeDisplayBlack';
+		src: url('public/font/Noe Display Black.eot'); /* IE9 Compat Modes */
+		src: url('public/font/Noe Display Black.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		url('public/font/Noe Display Black.woff') format('woff'); /* Pretty Modern Browsers */
+		}
+
+		body {
+			background-color: #F5F5F5;
+			padding-top: 200px;
+		}
+
+		h1 {
+			text-align: center;
+			font-size: 60px;
+			font-family: 'NoeDisplayBlack', serif;
+			height: 100px;
+		}
+
+		p {
+			text-align: center;
+			font-size: 10px;
+			font-family: 'courier';
+		}
+
+		a {
+			color: #666;
+			text-decoration: none;
+			border-bottom: 2px solid black;
+			padding-bottom: 4px;
+		}
+
+		a:hover {
+			background-color: black;
+			color: black;
+		}
+
+		.typed-cursor{
+		opacity: 1;
+		-webkit-animation: blink 0.7s infinite;
+		-moz-animation: blink 0.7s infinite;
+		animation: blink 0.7s infinite;
+		position: relative;
+		top: -5px;
+		color: #728162;
+		}
+		@keyframes blink{
+		0% { opacity:1; }
+		50% { opacity:0; }
+		100% { opacity:1; }
+		}
+		@-webkit-keyframes blink{
+		0% { opacity:1; }
+		50% { opacity:0; }
+		100% { opacity:1; }
+		}
+		@-moz-keyframes blink{
+		0% { opacity:1; }
+		50% { opacity:0; }
+		100% { opacity:1; }
+		}
+
+		@media screen and (max-width: 600px) {
+			body {
+				padding-top: 100px;
+			}
+
+			h1 {
+				font-size: 40px;
+			}
+		}
+
+		</style>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="public/js/typed.js" type="text/javascript"></script>
+
+		<script>
+		$(function(){
+		$("h1 span").typed({
+		strings: ["Will Nichols^700", "Developer^500", "Designer^500", "Network Engineer^500", "Systems Administrator^500", "Data Analyst^500", "^1000 Will Nichols"],
+		typeSpeed: 100,
+		startDelay: 100,
+		backSpeed: 60
+		});
+		});
+		</script>
+	</head>
 	<body>
-		<h1>Test</h1>
+		<h1><span>Will Nichols</span></h1>
+
+		<p>
+			<a href="http://github.com/wgen">github</a> .
+			<a href="http://behance.net/w-n">behance</a> .
+			<a href="https://www.linkedin.com/in/wgenichols">linkedin</a>
+		</p>
+
 	</body>
 </html>
