--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 		@font-face {
 		font-family: 'NoeDisplayBlack';
-		src: url('public/font/Noe Display Black.eot'); /* IE9 Compat Modes */
-		src: url('public/font/Noe Display Black.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-		url('public/font/Noe Display Black.woff') format('woff'); /* Pretty Modern Browsers */
+		src: url('/font/Noe Display Black.eot'); /* IE9 Compat Modes */
+		src: url('/font/Noe Display Black.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		url('/font/Noe Display Black.woff') format('woff'); /* Pretty Modern Browsers */
 		}
 
 		body {
@@ -84,7 +84,7 @@
 		</style>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="public/js/typed.js" type="text/javascript"></script>
+		<script src="/js/typed.js" type="text/javascript"></script>
 
 		<script>
 		$(function(){
