--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<p>
 			<a href="http://github.com/wgen">github</a> .
 			<a href="http://behance.net/w-n">behance</a> .
-			<a href="https://www.linkedin.com/in/wgenichols">linkedin</a>
+			<a href="https://linkedin.com/in/wgenichols">linkedin</a>
 		</p>
 
 	</body>
