--- a/index.html
+++ b/index.html
@@ -7,81 +7,7 @@
 		<meta name="keywords" content="" />
 		<meta name="robots" content="" />
 
-		<style type="text/css">
-
-		@font-face {
-		font-family: 'NoeDisplayBlack';
-		src: url('/font/Noe Display Black.eot'); /* IE9 Compat Modes */
-		src: url('/font/Noe Display Black.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-		url('/font/Noe Display Black.woff') format('woff'); /* Pretty Modern Browsers */
-		}
-
-		body {
-			background-color: #F5F5F5;
-			padding-top: 200px;
-		}
-
-		h1 {
-			text-align: center;
-			font-size: 60px;
-			font-family: 'NoeDisplayBlack', serif;
-			height: 100px;
-		}
-
-		p {
-			text-align: center;
-			font-size: 10px;
-			font-family: 'courier';
-		}
-
-		a {
-			color: #666;
-			text-decoration: none;
-			border-bottom: 2px solid black;
-			padding-bottom: 4px;
-		}
-
-		a:hover {
-			background-color: black;
-			color: black;
-		}
-
-		.typed-cursor{
-		opacity: 1;
-		-webkit-animation: blink 0.7s infinite;
-		-moz-animation: blink 0.7s infinite;
-		animation: blink 0.7s infinite;
-		position: relative;
-		top: -5px;
-		color: #728162;
-		}
-		@keyframes blink{
-		0% { opacity:1; }
-		50% { opacity:0; }
-		100% { opacity:1; }
-		}
-		@-webkit-keyframes blink{
-		0% { opacity:1; }
-		50% { opacity:0; }
-		100% { opacity:1; }
-		}
-		@-moz-keyframes blink{
-		0% { opacity:1; }
-		50% { opacity:0; }
-		100% { opacity:1; }
-		}
-
-		@media screen and (max-width: 600px) {
-			body {
-				padding-top: 100px;
-			}
-
-			h1 {
-				font-size: 40px;
-			}
-		}
-
-		</style>
+		<link rel="stylesheet"  type="text/css" href="/css/style.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="/js/typed.js" type="text/javascript"></script>
