--- a/404.html
+++ b/404.html
@@ -10,22 +10,17 @@ permalink: /404.html
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<meta name="robots" content="" />
-
 		<link rel="stylesheet"  type="text/css" href="/css/style.css">
 		<link rel="favicon" type="image/x-icon" href="/favicon.ico" />
-
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="/js/typed.js" type="text/javascript"></script>
-
 	</head>
 	<body>
 		<h1><span>Are you lost?</span></h1>
-
 		<p>
 			<a href="http://github.com/wgen">github</a> .
 			<a href="http://behance.net/w-n">behance</a> .
-			<a href="https://linkedin.com/in/wgenichols">linkedin</a>
+			<a href="http://linkedin.com/in/wgenichols">linkedin</a>
 		</p>
-
 	</body>
 </html>
