--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<meta name="robots" content="" />
-
 		<link rel="stylesheet"  type="text/css" href="/css/style.css">
 		<link rel="favicon" type="image/x-icon" href="/favicon.ico" />
-
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="/js/typed.js" type="text/javascript"></script>
-
 		<script>
 		$(function(){
 		$("h1 span").typed({
@@ -26,12 +23,10 @@
 	</head>
 	<body>
 		<h1><span>Will Nichols</span></h1>
-
 		<p>
 			<a href="http://github.com/wgen">github</a> .
 			<a href="http://behance.net/w-n">behance</a> .
-			<a href="https://linkedin.com/in/wgenichols">linkedin</a>
+			<a href="http://linkedin.com/in/wgenichols">linkedin</a>
 		</p>
-
 	</body>
 </html>
