--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ permalink: /404.html
 		<meta name="keywords" content="" />
 		<meta name="robots" content="" />
 		<link rel="stylesheet"  type="text/css" href="/css/style.css">
-		<link rel="favicon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="/js/typed.js" type="text/javascript"></script>
 	</head>
