Fix linkedin url

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<p>
 			<a href="http://github.com/wgen">github</a> .
 			<a href="http://behance.net/w-n">behance</a> .
-			<a href="http://linkedin.com/in/wgenichols">linkedin</a>
+			<a href="http://linkedin.com/in/will-nichols">linkedin</a>
 		</p>
 	</body>
 </html>
