--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<body>
 		<h1><span>Will Nichols</span></h1>
 		<p>
-			<a href="http://github.com/wgen">github</a> .
+			<a href="http://github.com/willnichols">github</a> .
 			<a href="http://behance.net/w-n">behance</a> .
 			<a href="http://linkedin.com/in/will-nichols">linkedin</a>
 		</p>
